# fear-greed-lstm

./: 2024_07_05_21_15_36_new_data_with_positions.csv  DataPreprocessor.py  LSTMModel.py  Makefile  ModelEvaluator.py  README.md  SignalStrategy.html  backtester_utils.py  colab.ipynb  explore_data.ipynb  fear_and_greed_index.csv  fear_greed_btc_combined.csv  fetch_data.py  generate_signals.py  main.ipynb  optuna_optimize.py  optuna_optimizer.py  plotting_utils.py  pyproject.toml  requirements.txt
backtests/example_backtest/non_optimized/: 2024_07_09_14_56_58_LSTM_model_epochs_50.keras  2024_07_09_14_57_03_new_data_with_positions.csv  SignalStrategy.html  backtest_stats_2024_07_09_14_57_03.txt  fear_and_greed_index.csv
backtests/example_backtest/optimized/: 2024_07_09_15_10_11_LSTM_model_epochs_100.keras  2024_07_09_15_10_16_new_data_with_positions.csv  SignalStrategy.html  backtest_stats_2024_07_09_15_10_16.txt  (+1 more)
docs/: mkdocs.yml
docs/docs/: index.md
fear_greed_lstm/: LSTM_FnG_working.py  __init__.py  backtester_live.py  dataset.py  features.py  plots.py  plotting_utils.py
fear_greed_lstm/modeling/: predict.py  train.py
models/: 2024_07_05_20_44_57_LSTM_model_epochs_100.keras  2024_07_05_20_51_17_LSTM_model_epochs_100.keras  2024_07_05_20_57_08_LSTM_model_epochs_100.keras  2024_07_05_20_58_27_LSTM_model_epochs_100.keras  2024_07_05_21_00_38_LSTM_model_epochs_50.keras  2024_07_05_21_05_34_LSTM_model_epochs_50.keras  2024_07_05_21_07_24_LSTM_model_epochs_50.keras  2024_07_05_21_15_36_LSTM_model_epochs_50.keras
notebooks/: explore_data.ipynb
