[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fear_greed_lstm"
version = "0.0.1"
description = "An application for training, testing, and backtesting an LSTM with Fear/Greed Index to trade Bitcoin"
authors = [
  { name = "Josh Bazzano" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["fear_greed_lstm"]
force_sort_within_sections = true
